--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aes256": "^1.1.0",
     "axios": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "hamburger-react": "^2.5.0",
     "howler": "^2.2.3",
     "jwt-decode": "^3.1.2",
